Removing cookie implementation, setItem Local Storage works properly, need to create functions to check if loggedIn == true then edit CSS to hide buttons Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -183,7 +183,8 @@ function writeMessage(message){
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+			<li><a href="games.html">Games</a></li>
 		</ul>
 </header>
    <table border="1px" align="center" id="blackJackArea">
