--- a/Projects/Project V 6/index.html
+++ b/Projects/Project V 6/index.html
@@ -6,22 +6,13 @@
 <link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css">
 <link type="text/javascript" href="scripts/shopping.js">
 <script>
-function getCookie(cname){
-	var name = cname;
-	var ca = document.cookie.split(";");
-	for(var i=0; i<ca.length; i++) {
-        var c = ca[i];
-        while (c.charAt(0)==' ') c = c.substring(1);
-        if (c.indexOf(name) != -1) return c.substring(name.length, c.length);
-    }
-     return "";
-}
+	
 </script>
 </head>
 
 <body>
 <script>
-	getCookie()
+	
 </script>
 <header>
 		<img src="images/logo.png" width="134" height="54"/>
@@ -29,11 +20,11 @@ function getCookie(cname){
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id="ln1"><a href="login.html">Login</a></li>
-            <li id="ln1"><a href="register.html">Register</a></li>
-            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li id="ln"><a href="logout.html">Log Out</a></li>
+            <li class="ln1"><a href="login.html">Login</a></li>
+            <li class="ln1"><a href="register.html">Register</a></li>
+            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li class="ln"><a href="logout.html">Log Out</a></li>
             
 		</ul>
 </header>
