--- a/Projects/Project V 6/login.html
+++ b/Projects/Project V 6/login.html
@@ -7,43 +7,27 @@
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
 <script>
-	function setCookie(cname, cvalue, exdays){
-	var d = new Date();
-    d.setTime(d.getTime() + (1*24*60*60*1000));
-    var expires = "expires="+d.toUTCString();
-    document.cookie = cname + "=" + cvalue + "; " + expires;
-}
-	function getCookie(cname){
-	var name = cname;
-	var ca = document.cookie.split(";");
-		for(var i=0; i<ca.length; i++) {
-      	  var c = ca[i];
-      	  while (c.charAt(0)==' ') c = c.substring(1);
-      	  if (c.indexOf(name) != -1) return c.substring(name.length, c.length);
-    	}
-    	return "";
+	function checkLogin(){
+		var retrievedObject = localStorage.getItem('LoggedIn');
+		if(retrievedObject.loggedIn == true){
+			//ENTER CODE HERE TO EDIT CSS!!!
+		}
 	}
-	checkCookie(cookie){
-
 </script>
 </head>
-
 <body>
-<script>
+	//CHECK IF LOGGED IN
 	
-	getCookie("user");
-		
-	</script>
 <header>
 		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id="ln1"><a href="login.html">Login</a></li>
-            <li id="ln1"><a href="register.html">Register</a></li>
-            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li id="ln"><a href="logout.html">Log Out</a></li>
+            <li class="ln1"><a href="login.html">Login</a></li>
+            <li class="ln1"><a href="register.html">Register</a></li>
+            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li class="ln"><a href="logout.html">Log Out</a></li>
             
 		</ul>
 </header>
@@ -64,10 +48,9 @@
 				<input type="submit" text="Submit" onClick=checkCookie(); value="Submit"/>
 			</form>
 </div>
-
 <div style="padding:20px;font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; text-align:center;">
-Enter your log in information above.<br>
-Logging in/Creating an Account gives you access to features such as The Shopping Cart and Game Trials!
+	Enter your log in information above.<br>
+	Logging in/Creating an Account gives you access to features such as The Shopping Cart and Game Trials!
 </div>
 <div>
 	<img src="http://i.imgur.com/XRzaECO.jpg" class="loginImg"/>
