--- a/Projects/Project V 6/games.html
+++ b/Projects/Project V 6/games.html
@@ -6,26 +6,10 @@
 <link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css">
 <link type="text/javascript" href="scripts/shopping.js">
 <script>
-checkLogin();
+function checkLogin();
 if(loggedIn == false){
 	var blackJackTrial = document.getElementById("bj");
 	blackJackTrial.innerHTML="<p><center>Only members who are logged in may play the Blackjack Game Trial!</center></p>";
-}
-function setItemCookie(cname, cvalue, exdays){
-	var d = new Date();
-    d.setTime(d.getTime() + (1*24*60*60*1000));
-    var expires = "expires="+d.toUTCString();
-    document.cookie = cname + "=" + cvalue + "; " + expires;
-}
-function getCookie(cname){
-	var name = cname;
-	var ca = document.cookie.split(";");
-	for(var i=0; i<ca.length; i++) {
-        var c = ca[i];
-        while (c.charAt(0)==' ') c = c.substring(1);
-        if (c.indexOf(name) != -1) return c.substring(name.length, c.length);
-    }
-     return "";
 }
 </script>
 </head>
@@ -37,9 +21,9 @@ function getCookie(cname){
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li id="ln1"><a href="login.html">Login</a></li><li id="ln1"><a href="register.html">Register</a></li>
-            <li id="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li id="ln"><a href="logout.html">Log Out</a></li>
+            <li class="ln1"><a href="login.html">Login</a></li><li id="ln1"><a href="register.html">Register</a></li>
+            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li class="ln"><a href="logout.html">Log Out</a></li>
             
 		</ul>
 </header>
@@ -65,7 +49,7 @@ function getCookie(cname){
             <td>
 				<center>Blackjack<br><small>Price: <em>$50</em></small>
 				<img id="gameimg" src="images/blackjack.jpg"/>
-				<button onClick=shoppingCart.add("Black Jack")>Add Item To Cart</button><br><button id="ln" onClick="blackjack.html">Play Game Trial</button>
+				<button onClick=shoppingCart.add("Black Jack")>Add Item To Cart</button><br><button class="ln" onClick="blackjack.html">Play Game Trial</button>
 				<br><div id="bj"></div></center>
 			</td>
 			<td>
@@ -78,16 +62,5 @@ function getCookie(cname){
         </tr>
     </tbody>   
 </table>
-<script>
-	var check = getCookie("loggedIn");
-	console.log(check);
-	if (check == null){
-		document.getElementById("ln").style.display="none";
-		document.getElementById('ln1').style.display ="inline";
-	} else {
-		document.getElementById("ln").style.display="inline";
-		document.getElementById('ln1').style.display ="none";
-	}
-</script>
 </body>
 </html>
