--- a/Projects/Project V 6/login.html
+++ b/Projects/Project V 6/login.html
@@ -7,9 +7,9 @@
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
 <script>
-	function checkLogin(){
-		var retrievedObject = localStorage.getItem('LoggedIn');
-		if(retrievedObject.loggedIn == true){
+	var retrievedObject = localStorage.getItem("LoggedIn");
+	function checkLogin(retrievedObject){
+		if(retrievedObject.loggedIn == "true"){
 			document.getElementsByClass("ln1").display="none";
 			document.getElementsByCLass("ln").display="inline";
 		}else{
@@ -17,11 +17,14 @@
 			document.getElementsByCLass("ln").display="none";
 		}
 	}
+	function setLogin(){
+		//console.log("SET LOCAL STORAGE");
+	}
 </script>
 </head>
 <body>
 	<script>
-	//CHECK IF LOGGED IN
+	checkLogin();
 	
 	</script>
 <header>
@@ -51,7 +54,7 @@
 	<form name="loginform" action="login.html" method="get" id="loginform" onsubmit="checkLogin()">
 				<input name="username" type="text" /><div id="headerlogin">Username</div><br>
 				<input name="password" type="password" /><div id="headerlogin">Password</div><br>
-				<input type="submit" text="Submit" onClick=checkCookie(); value="Submit"/>
+				<input type="submit" text="Submit" onClick=setLogin(); value="Submit"/>
 			</form>
 </div>
 <div style="padding:20px;font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; text-align:center;">
