--- a/Projects/Project V 6/login.html
+++ b/Projects/Project V 6/login.html
@@ -28,11 +28,11 @@
 	}
 	function checkLogin(Obj){
 		if(Obj.loggedIn == "true"){
-			document.getElementsByClass("ln1").display="none";
-			document.getElementsByCLass("ln").display="inline";
+			document.getElementsByClass("ln1").style.display="none";
+			document.getElementsByCLass("ln").style.display="inline";
 		}else{
-			document.getElementsByClass("ln1").display="inline";
-			document.getElementsByCLass("ln").display="none";
+			document.getElementsByClass("ln1").style.display="inline";
+			document.getElementsByCLass("ln").style.display="none";
 		}
 	}
 </script>
